added chunking and resumability

--- a/cross_encoder_2/playground.ipynb
+++ b/cross_encoder_2/playground.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,13 +94,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = '/home/ubuntu/projects/cross-encoder-2/data/fulldocs.tsv'\n",
-    "data = pd.read_csv(filepath, sep='\\t', header=None, names=['query_id', 'query', 'passage_id', 'document'])\n",
+    "chunking = False\n",
+    "chunksize = 10 ** 5\n",
     "\n",
-    "query_data = data['query'].tolist()\n",
-    "document_data = data['document'].tolist()\n",
     "\n",
-    "query_train, query_val, document_train, document_val = train_test_split(query_data, document_data, test_size=0.2, random_state=42)\n"
+    "if chunking:\n",
+    "    filepath = '/home/ubuntu/projects/cross-encoder-2/data/fulldocs.tsv'\n",
+    "    data = pd.read_csv(filepath, sep='\\t', header=None, names=['query_id', 'query', 'passage_id', 'document'])\n",
+    "\n",
+    "    query_data = data['query'].tolist()\n",
+    "    document_data = data['document'].tolist()\n",
+    "\n",
+    "    query_train, query_val, document_train, document_val = train_test_split(query_data, document_data, test_size=0.2, random_state=42)\n",
+    "else:\n",
+    "    \n",
+    "    filepath = '/home/ubuntu/projects/cross-encoder-2/data/fulldocs.tsv'\n",
+    "    data_iterator = pd.read_csv(filepath, sep='\\t', header=None, names=['query_id', 'query', 'passage_id', 'document'], chunksize=chunksize)\n",
+    "    \n",
+    "    query_data = []\n",
+    "    document_data = []\n",
+    "    \n",
+    "    for chunk in data_iterator:\n",
+    "        query_data.extend(chunk['query'].tolist())\n",
+    "        document_data.extend(chunk['document'].tolist())\n",
+    "    \n",
+    "    query_train, query_val, document_train, document_val = train_test_split(query_data, document_data, test_size=0.2, random_state=42)\n",
+    "    "
    ]
   },
   {
@@ -163,20 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (3546601399.py, line 21)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 21\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'Epoch {epoch + 1}/{num_epochs}, Loss: {total_loss / len(train_loader)}')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_epochs = 20\n",
+    "\n",
+    "model_save_path = \"cross_encoder_checkpoint.pth\"\n",
+    "\n",
+    "start_epoch = 0\n",
+    "\n",
+    "if os.path.exists(model_save_path):\n",
+    "    checkpoint = torch.load(model_save_path)\n",
+    "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "    start_epoch = checkpoint['epoch'] + 1\n",
+    "    print(f'Checkpoint loaded from {model_save_path}, resuming training from epoch {start_epoch}')\n",
+    "\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -196,15 +218,18 @@
     "\n",
     "        total_loss += loss.item()\n",
     "\n",
-    "    print(f'Epoch {epoch + 1}/{num_epochs}, Loss: {total_loss / len(train_loader)}')\n"
+    "    checkpoint = {\n",
+    "        'epoch': epoch,\n",
+    "        'model_state_dict': model.state_dict(),\n",
+    "        'optimizer_state_dict': optimizer.state_dict()\n",
+    "    }\n",
+    "    torch.save(checkpoint, model_save_path)\n",
+    "\n",
+    "    print(f'Epoch {epoch + 1}/{num_epochs}, Loss: {total_loss / len(train_loader)}')\n",
+    "    print(f'Checkpoint saved to {model_save_path} after epoch {epoch + 1}')\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
